# safeclaw

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  SECURITY.md  policy.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  planner-guide.md  plugin-guide.md
examples/: demo.sh
examples/sample-repo/: .env.example  main.py
safeclaw/: __init__.py  audit.py  cli.py  dashboard.py  planner.py  policy.py  redaction.py  runner.py
safeclaw/plugins/: __init__.py  base.py  deps_audit.py  log_summarize.py  repo_stats.py  secrets_scan.py  todo_scan.py
tests/: conftest.py  test_audit.py  test_cli.py  test_dashboard.py  test_planner.py  test_policy.py  test_redaction.py  test_runner.py
tests/test_plugins/: test_deps_audit.py  test_log_summarize.py  test_repo_stats.py  test_secrets_scan.py  test_todo_scan.py
